--- a/src/SGDS_Web/Views/Donneur/Details.cshtml
+++ b/src/SGDS_Web/Views/Donneur/Details.cshtml
@@ -1,13 +1,14 @@
-﻿@model ApplicationCore.Entities.Collectes.Donneur
+﻿@model SGDS_Web.ViewModels.DonneurVM
 
 @{
     ViewData["Title"] = "Details";
 }
 
 <h1>Details</h1>
-
+<a asp-action="Create" asp-controller="Dossiers" asp-route-donneurId="@Model.Id" asp-route-CIN="@Model.CIN" asp-route-NIF="@Model.NIF">Ajouter un dossier</a>
 <div>
     <h4>Donneur</h4>
+    
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -15,12 +16,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.GroupeSanguin)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PersonneDeContact)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PersonneDeContact!.CIN)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CIN)
@@ -87,30 +82,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreePar)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreePar)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreeLe)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreeLe)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ModifiePar)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ModifiePar)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ModifieLe)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ModifieLe)
         </dd>
     </dl>
 </div>
