Add Dossier Complete

--- a/src/SGDS_Web/Views/Donneur/Create.cshtml
+++ b/src/SGDS_Web/Views/Donneur/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model SGDS_Web.ViewModels.DonneurVM
+﻿@using SGDS_Web.ViewModels.Donneurs
+@model DonneurVM
 
 @{
     ViewData["Title"] = "Create";
