--- a/src/SGDS_Web/Views/Donneur/Index.cshtml
+++ b/src/SGDS_Web/Views/Donneur/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<SGDS_Web.ViewModels.DonneurVM>
+﻿@using SGDS_Web.ViewModels.Donneurs
+@model IEnumerable<DonneurVM>
 
 @{
     ViewData["Title"] = "Index";
