--- a/src/SGDS_Web/Views/Dossiers/Edit.cshtml
+++ b/src/SGDS_Web/Views/Dossiers/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model SGDS_Web.ViewModels.DossierVM
+﻿@using SGDS_Web.ViewModels.Dossiers
+@model DossierVM
 
 @{
     ViewData["Title"] = "Edit";
