--- a/src/SGDS_Web/Views/Donneur/Details.cshtml
+++ b/src/SGDS_Web/Views/Donneur/Details.cshtml
@@ -1,16 +1,23 @@
-﻿@model SGDS_Web.ViewModels.DonneurVM
+﻿@using SGDS_Web.ViewModels.Donneurs
+@model DonneurVM
 
 @{
     ViewData["Title"] = "Details";
 }
 
 <h1>Details</h1>
-<a asp-action="Create" asp-controller="Dossiers" asp-route-donneurId="@Model.Id" asp-route-CIN="@Model.CIN" asp-route-NIF="@Model.NIF">Ajouter un dossier</a>
+<a asp-action="Create" asp-controller="Dossiers" asp-route-donneurId="@Model.Id">Ajouter un dossier</a>
 <div>
     <h4>Donneur</h4>
     
     <hr />
     <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Id)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.GroupeSanguin)
         </dt>
