--- a/src/SGDS_Web/Views/Dossiers/Details.cshtml
+++ b/src/SGDS_Web/Views/Dossiers/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model SGDS_Web.ViewModels.DossierVM
+﻿@using SGDS_Web.ViewModels.Dossiers
+@model DossierVM
 
 @{
     ViewData["Title"] = "Details";
@@ -10,12 +11,12 @@
     <h4>Dossier</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Donneur)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Donneur.CIN)
-        </dd>
+        </dd> *@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.MaladieChronique)
         </dt>
