--- a/src/SGDS_Web/Views/Donneur/Index.cshtml
+++ b/src/SGDS_Web/Views/Donneur/Index.cshtml
@@ -49,6 +49,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EstEligible)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -90,6 +93,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EstEligible)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
