--- a/src/SGDS_Web/Views/Dossiers/Edit.cshtml
+++ b/src/SGDS_Web/Views/Dossiers/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using SGDS_Web.ViewModels.Dossiers
-@model DossierVM
+@model CreerModifierDossier
 
 @{
     ViewData["Title"] = "Edit";
@@ -16,7 +16,7 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="DonneurId" class="control-label"></label>
-                <select asp-for="DonneurId" class="form-control" asp-items="ViewBag.DonneurId"></select>
+                <select asp-for="DonneurId" class="form-control js-select2" asp-items="@Model.Donneurs"></select>
                 <span asp-validation-for="DonneurId" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
