--- a/src/SGDS_Web/Views/Collectes/Create.cshtml
+++ b/src/SGDS_Web/Views/Collectes/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model SGDS_Web.ViewModels.CollecteVM
+﻿@using SGDS_Web.ViewModels.Collectes
+@model CreerModifierCollecte
 
 @{
     ViewData["Title"] = "Create";
@@ -13,6 +14,16 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Libelle" class="control-label"></label>
+                <input asp-for="Libelle" class="form-control" />
+                <span asp-validation-for="Libelle" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Code" class="control-label"></label>
+                <input asp-for="Code" class="form-control" />
+                <span asp-validation-for="Code" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
@@ -24,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CentreId" class="control-label"></label>
-                <select asp-for="CentreId" class ="form-control" asp-items="ViewBag.CentreId"></select>
+                <select asp-for="CentreId" class ="form-control" asp-items="@Model.Centres"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
