--- a/src/SGDS_Web/Views/Collectes/Delete.cshtml
+++ b/src/SGDS_Web/Views/Collectes/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model SGDS_Web.ViewModels.CollecteVM
+﻿@using SGDS_Web.ViewModels.Collectes
+@model CollecteVM
 
 @{
     ViewData["Title"] = "Delete";
@@ -11,23 +12,35 @@
     <h4>Collecte</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Code)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Code)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DateCollecte)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DateCollecte)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Libelle)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Libelle)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Centre)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Centre!.NomCentre)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Description)
         </dd>
     </dl>
     
