--- a/src/SGDS_Web/Views/Collectes/Details.cshtml
+++ b/src/SGDS_Web/Views/Collectes/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model SGDS_Web.ViewModels.CollecteVM
+﻿@using SGDS_Web.ViewModels.Collectes
+@model CollecteVM
 
 @{
     ViewData["Title"] = "Details";
@@ -11,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.Code)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.Code)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DateCollecte)
@@ -23,10 +24,22 @@
             @Html.DisplayFor(model => model.DateCollecte)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Libelle)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Libelle)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Centre)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Centre!.NomCentre)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Description)
         </dd>
     </dl>
 </div>
