--- a/src/SGDS_Web/Views/Collectes/Edit.cshtml
+++ b/src/SGDS_Web/Views/Collectes/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model SGDS_Web.ViewModels.CollecteVM
+﻿@using SGDS_Web.ViewModels.Collectes
+@model CreerModifierCollecte
 
 @{
     ViewData["Title"] = "Edit";
@@ -14,6 +15,16 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
+                <label asp-for="Libelle" class="control-label"></label>
+                <input asp-for="Libelle" class="form-control" />
+                <span asp-validation-for="Libelle" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Code" class="control-label"></label>
+                <input asp-for="Code" class="form-control" />
+                <span asp-validation-for="Code" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
@@ -25,7 +36,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CentreId" class="control-label"></label>
-                <select asp-for="CentreId" class="form-control" asp-items="ViewBag.CentreId"></select>
+                <select asp-for="CentreId" class="form-control" asp-items="@Model.Centres"></select>
                 <span asp-validation-for="CentreId" class="text-danger"></span>
             </div>
             <div class="form-group">
