--- a/src/SGDS_Web/Views/Donneur/Index.cshtml
+++ b/src/SGDS_Web/Views/Donneur/Index.cshtml
@@ -100,6 +100,7 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Details" asp-controller="Dossiers" asp-route-donneurId="@item.Id"><i class="fa fas-folder">Dossier</i></a>
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
