--- a/src/SGDS_Web/Views/Dons/Details.cshtml
+++ b/src/SGDS_Web/Views/Dons/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model SGDS_Web.ViewModels.DonVM
+﻿@using SGDS_Web.ViewModels.Dons
+@model DonVM
 
 @{
     ViewData["Title"] = "Details";
@@ -14,7 +15,7 @@
             @Html.DisplayNameFor(model => model.Donneur)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Donneur.CIN)
+            @Html.DisplayFor(model => model.Donneur.NIF)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Collecte)
