--- a/src/SGDS_Web/Views/Dons/Edit.cshtml
+++ b/src/SGDS_Web/Views/Dons/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model SGDS_Web.ViewModels.DonVM
+﻿@using SGDS_Web.ViewModels.Dons
+@model CreerModifierDon
 
 @{
     ViewData["Title"] = "Edit";
@@ -15,12 +16,12 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="DonneurId" class="control-label"></label>
-                <select asp-for="DonneurId" class="form-control" asp-items="ViewBag.DonneurId"></select>
+                <select asp-for="DonneurId" class="form-control" asp-items="@Model.Donneurs"></select>
                 <span asp-validation-for="DonneurId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CollecteId" class="control-label"></label>
-                <select asp-for="CollecteId" class="form-control" asp-items="ViewBag.CollecteId"></select>
+                <select asp-for="CollecteId" class="form-control" asp-items="@Model.Collectes"></select>
                 <span asp-validation-for="CollecteId" class="text-danger"></span>
             </div>
             <div class="form-group">
