--- a/src/SGDS_Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/SGDS_Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -27,6 +27,13 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="form-floating mb-3">
+                @* <label asp-for="Input.CentreId" class="form-control"></label> *@
+                <select asp-for="Input.CentreId" class="form-select" asp-items="@Model.Centres">
+                    <option value="">-- Selectionner un centre --</option>
+                </select>
+                <span asp-validation-for="Input.CentreId" class="text-danger"></span>
+            </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
