--- a/src/SGDS_Web/Views/Shared/_Layout.cshtml
+++ b/src/SGDS_Web/Views/Shared/_Layout.cshtml
@@ -46,6 +46,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Dossiers" asp-action="Index">Dossiers</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Roles" asp-action="Index">Roles</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
